trying to fix broken css

--- a/landing/static/landing/css/site.css
+++ b/landing/static/landing/css/site.css
@@ -8,13 +8,13 @@ h1{
     color: #E22EFF;
 }
 
-.purple{
+.purple1{
     font: 1.0rem Inconsolata, monospace;
     font-family: 'Courier New', monospace;
     color: #E22EFF;
 }
 
-.blue{
+.blue1{
     font: 1.0rem Inconsolata, monospace;
     font-family: 'Courier New', monospace;    
     color: #63B8FF;
